GameSpace: Import Bringup from EvolutionOS
- Additionally keeping original Copyrights of EvoX

Signed-off-by: Dinesh Kumar <dseera6@gmail.com>

--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -35,7 +35,7 @@
             android:summary="%s"
             android:title="@string/ringer_mode_title" />
 
-        <com.evolution.settings.preference.SystemSettingSwitchPreference
+        <com.altho.settings.preference.SystemSettingSwitchPreference
             android:defaultValue="false"
             android:key="gamespace_suppress_fullscreen_intent"
             android:summary="@string/suppress_fullscreen_intent_summary"
@@ -69,7 +69,7 @@
             android:key="gamespace_adb_disabled"
             android:title="@string/adb_disabled_title" />
 
-        <com.evolution.settings.preference.CustomSeekBarPreference
+        <com.altho.settings.preference.CustomSeekBarPreference
             android:key="gamespace_menu_opacity"
             android:title="@string/gamespace_menu_opacity_title"
             android:defaultValue="100"
