--- a/app/src/main/res/layout/panel_view.xml
+++ b/app/src/main/res/layout/panel_view.xml
@@ -44,7 +44,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="4dp"
                     android:layout_alignParentStart="true" 
-                    android:fontFamily="@*android:string/config_lightFontFamily"
+                    android:fontFamily="sans-serif-light"
                     android:gravity="start|center_vertical"
                     android:text="@string/settings_title"
                     android:textSize="26sp" />
@@ -55,7 +55,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="4dp"
                     android:layout_alignParentEnd="true" 
-                    android:fontFamily="@*android:string/config_lightFontFamily"
+                    android:fontFamily="sans-serif-light"
                     android:gravity="end|center_vertical"
                     android:format12Hour="h:mm"
                     android:format24Hour="kk:mm"
